--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,9 @@ repositories {
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile 'org.springframework.boot:spring-boot-starter-mustache'
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'mysql:mysql-connector-java'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
